--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ PORT = 3001 # Port to run the server on
 SIMILARITY_MEASURE = "cosine" # "cosine" or "dot"
 
 [API_KEYS]
-OPENAI = "sk-proj-fdFBg68Z0FrZL25EsrHvT3BlbkFJlEUU4Ha4X0MANM7X9WHi" # OpenAI API key - sk-1234567890abcdef1234567890abcdef
+OPENAI = "" # OpenAI API key - sk-1234567890abcdef1234567890abcdef
 GROQ = "" # Groq API key - gsk_1234567890abcdef1234567890abcdef
 
 [API_ENDPOINTS]
